2008-02-10  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services/Banshee.Database/BansheeModelProvider.cs:
	* src/Core/Banshee.Services/Banshee.PlaybackController/PlaybackControllerService.cs:
	* src/Core/Banshee.Services/Banshee.Playlists.Formats.Xspf/Playlist.cs:
	* src/Core/Banshee.Services/Banshee.Sources/SourceManager.cs:
	Fixed more compiler warnings

2008-02-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Sources/DatabaseSource.cs:
	* src/Core/Banshee.Services/Banshee.Playlist/PlaylistSource.cs:
	* src/Core/Banshee.Services/Banshee.Playlist/AbstractPlaylistSource.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/SourceActions.cs:
	Fix some compiler warnings.

2008-02-10  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services/Banshee.AudioProfiles/ProfileConfiguration.cs:
	* src/Core/Banshee.Services/Banshee.AudioProfiles/ProfileManager.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/AlbumListDatabaseModel.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/ArtistListDatabaseModel.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryTrackInfo.cs:
	* src/Core/Banshee.Services/Banshee.Database/BansheeDbConnection.cs:
	* src/Core/Banshee.Services/Banshee.Library/LibrarySource.cs:
	* src/Core/Banshee.Services/Banshee.PlaybackController/ICanonicalPlaybackController.cs:
	Cleaned up a lot of compiler warnings

2008-02-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Dap/Banshee.DapCore/Banshee.DapCore/AsyncDevice.cs:
	Fixed build issue
	
2008-02-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Dap/Banshee.DapCore/Banshee.DapCore/AsyncDevice.cs:
	Cosmetic changes and fixed a typo in UploadTrack
	
2008-02-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Dap/Banshee.DapCore/Makefile.am
	* src/Dap/Banshee.DapCore/Banshee.DapCore/AsyncDevice.cs:
	Added wrapper to make the calls to devices asynchronous
	  
2008-02-10  Alan McGovern <alan.mcgovern@gmail.com> 
